# term-craft

./: README.md
term-craft/: .gitignore  CMakeLists.txt  make.sh  map.cpp  map.h  player.cpp  player.h  pos.h  resource.c  resource.h  structure.cpp  structure.h  termcraft.cpp
